Read done (+ a whole lot of extra logic)
