# backend/src/main/java/com/nickmous/beanstash/controller/dto/user/request/ReadRequest.java
@@ -1,0 +1,8 @@
+package com.nickmous.beanstash.controller.dto.user.request;
+
+import jakarta.validation.constraints.NotBlank;
+
+public record ReadRequest (
+    @NotBlank String username
+) {
+}
