# backend/src/main/java/com/nickmous/beanstash/controller/dto/user/response/ReadResponse.java
@@ -1,0 +1,9 @@
+package com.nickmous.beanstash.controller.dto.user.response;
+
+public record ReadResponse (
+    String username,
+    String email,
+    String firstName,
+    String lastName
+) {
+}
